Prevented navbar squashing

--- a/style.css
+++ b/style.css
@@ -105,10 +105,11 @@ body {
 
 .box {
 
-    text-align: center;
+    text-align:right;
     font-size: 25px;
-    padding: 10px 30px 10px 30px;
+    padding: 10px 30px;
 }
+
 .boxHome {background-color: #79807e;}
 .boxHome:hover {background-color: #9fada9;}
 
@@ -130,6 +131,7 @@ body {
     padding: 10px;
     justify-content: space-around;
     margin: 0% 18% 0% 18%;
+    min-width: 660px;
 }
 
 .navbarLucky {
